<resources>
    <string name="app_name">Chat City Official</string>
    <string name="title_home">Home</string>
    <string name="title_saved">Saved</string>
    <string name="title_create">Create</string>
    <string name="title_chats">Chats</string>
    <string name="title_profile">Profile</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibGVvZGVsZ2FkbzExMSIsImEiOiJjbWRqMDF2OGswZjF1MmpzYjdtbThuam94In0.QlS3L22SRl7Iw8vRdNnUzw</string>
</resources>