<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_saved"
        android:icon="@android:color/transparent"
        android:title="@string/title_saved" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@android:color/transparent"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_create"
        android:icon="@android:color/transparent"
        android:title="@string/title_create" />

    <item
        android:id="@+id/navigation_chats"
        android:icon="@android:color/transparent"
        android:title="@string/title_chats" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@android:color/transparent"
        android:title="@string/title_profile" />

</menu>